--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="/app.js" defer></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <title>Campi</title>
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
 </head>
 <body>
 
