--- a/login.html
+++ b/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campi</title>
-    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css">
-    <script type="module" src="/app/components/Main/main.js" defer></script>
+    <script type="module" src="./app/components/Main/main.js" defer></script>
 </head>
 <body>
     <style>
@@ -28,7 +28,7 @@
             <div class="col-lg-3 col-md-2"></div>
             <div class="col-lg-6 col-md-8 login-box">
                 <div class="col-lg-12 login-key">
-                    <img src="../img/logo.png" alt="Logo" style="height: 80px;">
+                    <img src="./img/logo.png" alt="Logo" style="height: 80px;">
                 </div>                
                 <div class="col-lg-12 login-title">
                     ¡Bienvenido a Campuslands!
