--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <select id="ciudad" class="form-control">
                                     <option value="">Seleccione su ciudad</option>
                                     <option value="Bucaramanga">Bucaramanga</option>
-                                    <!--<option value="Bogotá">Bogotá</option>-->
+                                    <option value="Bogota">Bogotá</option>
                                 </select>
                             </div>
                             <!-- Botón centrado -->
