panel admin, landing inform

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-2"></div>
+            <div class="admin-section">
+                <button id="adminButton" class="admin-button">Admin</button>
+            </div>
             <div class="col-lg-6 col-md-8 login-box">
                 <div class="col-lg-12 login-key">
                     <img src="./img/logo.png" alt="Logo" style="height: 80px;">
